--- a/DASHBOARD/index.html
+++ b/DASHBOARD/index.html
@@ -94,6 +94,13 @@
         tr:last-child td {
             border-bottom: none;
         }
+        .version {
+            position: fixed;
+            top: 6px;
+            left: 10px;
+            font-size: 11px;
+            color: #75e6a0;
+        }
         .empty-message {
             text-align: center;
             padding: 40px;
@@ -103,6 +110,8 @@
     </style>
 </head>
 <body>
+    <div class="version">v0.0.6</div>
+    <script src="version-check.js"></script>
     <h1>Admin Dashboard</h1>
     <div class="toolbar">
         <!-- добавьте кнопки здесь -->
