--- a/DASHBOARD/index.html
+++ b/DASHBOARD/index.html
@@ -202,7 +202,7 @@
 
     <!-- ====== Dashboard Page ====== -->
     <div id="dashboard-page" class="page">
-        <div class="version">v0.0.6</div>
+        <div class="version"></div>
         <div id="org-name" class="org-label" style="text-align:center;"></div>
         <h1>Admin Dashboard</h1>
         <div class="toolbar">
