--- a/DASHBOARD/dashboard-page/index.html
+++ b/DASHBOARD/dashboard-page/index.html
@@ -12,10 +12,10 @@
     <h1>Admin Dashboard</h1>
     <div class="toolbar">
         <div class="toolbar-spacer"></div>
-        <button class="toolbar-btn" id="btn-zip" title="Download ZIP">ZIP</button>
         <button class="settings-btn" title="Settings">&#9881;</button>
-        <button id="btn-logout" class="toolbar-btn" title="Logout">Logout</button>
         <div id="status" class="status disconnected">Connecting...</div>
+        <button class="toolbar-btn" id="btn-zip" title="Download ZIP">INSTALL</button>
+        <button id="btn-logout" class="toolbar-btn" title="Logout">Logout</button>
     </div>
     <table id="data-table">
         <thead id="table-head"></thead>
